# my-speech-google

./: .extra_repo_ignores  .gitignore  AGENTS.md  README.md  TASK_speech_google_IDEA.md  bench_compare.sh  mix.exs  pyproject.toml  start_dev.sh  stt_file_gemini.py  stt_file_google.py  stt_port_worker.py  tts_port_worker.py
bench_audio/: README.md  manifest.tsv
config/: config.exs  dev.exs  runtime.exs  test.exs
docs/: 01-goals-and-success-criteria.md  02-google-stt-options.md  03-google-tts-options.md  04-reference-implementations-and-prior-art.md  05-mvp-proposals.md  06-setup-and-credentials.md  07-web-research-google-cloud-stt-v2.links.md  07-web-research-google-cloud-stt-v2.md  07c-web-research-streaming-url.md  07d-streaming-urls-candidates.txt  07e-validated-google-cloud-stt-links.md  07f-web-research-recognizer-underscore.md  07g-web-research-create-recognizer-url.md  07h-web-research-recognizers-underscore-evidence.md  08-web-research-gemini-live-audio-stt.md  08b-gemini-live-api-transcription-validated.md  09-web-research-google-interactions.md  09a-interactions-api-search-urls.txt  09b-google-interactions-reality-check.md  10-other-repos-intent-and-flow-map.md  11-tech-picture-for-this-repo.md  12-implementation-plan.md  12-web-research-dspy-gemini.md  13-phase1-python-workers-then-elixir-only-plan.md  14-elixir-providers-and-switching-plan.md  15-rfc-pubsub-event-bus.md  README.md  stt-benchmark-findings.md
docs/diagrams/: implementation_flow.d2  migration_plan.d2  provider_decision.d2  provider_switching_plan.d2  pubsub_event_bus.d2  speech_loop.d2
(+40 files in other folders)
